# ChatApp

./: .gitignore  pyproject.toml
backend/account/: admin.py  models.py  serializers.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_user_photo_ppoi.py  0003_user_is_online.py
backend/backend/: asgi.py  settings.py  token_auth.py  urls.py
backend/room/: consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/room/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: ContactManagement.vue  Home.vue  LogIn.vue  SignUp.vue  UserProfile.vue  UserSearch.vue
